Fixed: Casedoc not working on mobile devices

--- a/firstCaseBetaDemo-main/Public/src/app/casedoc/casedoc.component.css
+++ b/firstCaseBetaDemo-main/Public/src/app/casedoc/casedoc.component.css
@@ -51,15 +51,56 @@
   padding: 0;
 }
 
+@media (max-width: 768px) {
+  .slide {
+    font-size: 12px;
+  }
+}
+
+.case-title {
+  text-align: center;
+  font-size: xx-large;
+  font-family: PopRegular;
+  margin: 0;
+}
+
+.judgement-details {
+  text-align: right;
+  padding-right: 20px;
+  border-right: 1px solid #111;
+}
+
+.judgement-details-value {
+  border-left: 1px solid #111;
+  padding-left: 20px;
+}
+
+.para-content {
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 0 !important;
+  font-size: 1.04rem;
+  line-height: 2.2rem;
+}
+
+@media (max-width: 768px) {
+  .case-title,
+  .judgement-details,
+  .judgement-details-value,
+  .para-content {
+    font-size: 12px;
+  }
+
+  .para-content {
+    line-height: 1.5rem;
+  }
+}
+
 .container-elem {
   margin: 0 5%;
   justify-content: space-between;
 }
 
 @media (max-width: 991px) {
-  .slide {
-    padding: 0;
-  }
   #slides-container {
     height: auto;
     padding: 10px 0%;
@@ -141,10 +182,21 @@ button:hover,
   color: #fff;
 }
 
+.tab-list {
+  display: flex;
+}
+
+@media (max-width: 690px) {
+  .tab-list {
+    display: block;
+  }
+}
+
 .tab {
   border: none;
   border-radius: 10px 10px 0px 0px;
   outline: none;
+  text-align: center;
   z-index: 1;
   padding: 10px 16px;
   background-color: #f1f1f1;
@@ -312,24 +364,6 @@ button:hover,
   }
 }
 
-.case-title {
-  text-align: center;
-  font-size: xx-large;
-  font-family: PopRegular;
-  margin: 0;
-}
-
-.judgement-details {
-  text-align: right;
-  padding-right: 20px;
-  border-right: 1px solid #111;
-}
-
-.judgement-details-value {
-  border-left: 1px solid #111;
-  padding-left: 20px;
-}
-
 .input-group {
   max-width: 20vw;
   height: 60px;
@@ -401,11 +435,26 @@ button:hover,
 .top-bar {
   display: flex;
   justify-content: space-between;
-  padding: 0 5%;
+  padding: 0 20px;
   align-items: center;
   border-bottom: 1px solid #ccc;
   border-radius: 10px 0px 0px 10px;
   background-color: whitesmoke;
+}
+.search-in-page-scrolled {
+  position: fixed;
+  z-index: 50;
+  right: 0px;
+  border-bottom: none;
+}
+
+@media (max-width: 768px) {
+  .top-bar {
+    display: block;
+  }
+  .search-in-page-scrolled {
+    display: none;
+  }
 }
 
 table,
